add hero section

--- a/src/components/Base/Header/Header.astro
+++ b/src/components/Base/Header/Header.astro
@@ -3,10 +3,9 @@ import Logo from '../Logo/Logo.astro';
 import './header.css';
 ---
 
-<section class="header">
+<header class="header">
   <div class="container header__container">
     <Logo widht="74" height="105" />
-
     <nav class="menu">
       <ul class="menu__list">
         <li class="menu__item">
@@ -25,7 +24,6 @@ import './header.css';
           <a class="menu__link link" href="#">Pu-erh</a>
         </li>
       </ul>
-
       <ul class="menu__actions">
         <li class="menu__action">
           <a href="#">
@@ -45,4 +43,4 @@ import './header.css';
       </ul>
     </nav>
   </div>
-</section>
+</header>
