--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import './../style.css';
 import Layout from '../layouts/Layout.astro';
+import Hero from '../components/Main/Hero/Hero.astro';
 ---
 
 <Layout>
 	<main class="main">
-		
+		<Hero />
 	</main>
 </Layout>
