--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,14 @@
 import './../style.css';
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Main/Hero/Hero.astro';
+import Blockquote from '../components/Main/Blockquote/Blockquote.astro';
+import Collections from '../components/Main/Collections/Collections.astro';
 ---
 
 <Layout>
 	<main class="main">
 		<Hero />
+		<Blockquote />
+		<Collections />
 	</main>
 </Layout>
