--- a/src/components/Base/Header/Header.astro
+++ b/src/components/Base/Header/Header.astro
@@ -26,17 +26,17 @@ import './header.css';
       </ul>
       <ul class="menu__actions">
         <li class="menu__action">
-          <a href="#">
+          <a class="link" href="#">
             <img src="./images/icon-cart.svg" alt="icon cart">
           </a>
         </li>
         <li class="menu__action">
-          <a href="#">
+          <a class="link" href="#">
             <img src="./images/icon-user.svg" alt="icon user">
           </a>
         </li>
         <li class="menu__action">
-          <a href="#">
+          <a class="link" href="#">
             <img src="./images/icon-search.svg" alt="icon search">
           </a>
         </li>
