--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Main/Hero/Hero.astro';
 import Blockquote from '../components/Main/Blockquote/Blockquote.astro';
 import Collections from '../components/Main/Collections/Collections.astro';
+import Reviews from '../components/Main/Reviews/Reviews.astro';
+import Blog from '../components/Main/Blog/Blog.astro';
 ---
 
 <Layout>
@@ -11,5 +13,7 @@ import Collections from '../components/Main/Collections/Collections.astro';
 		<Hero />
 		<Blockquote />
 		<Collections />
+		<Reviews />
+		<Blog />
 	</main>
 </Layout>
