--- a/src/components/Main/Blockquote/blockquote.css
+++ b/src/components/Main/Blockquote/blockquote.css
@@ -2,6 +2,7 @@
   margin: 150px auto;
   max-width: 705px;
   font-family: var(--second-family);
+  font-style: italic;
   font-weight: 300;
   font-size: 40px;
   text-align: center;
