--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
+  --icon-arrow: url("data:image/svg+xml,%3Csvg width='5' height='10' viewBox='0 0 5 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.158658 9.83771C0.370205 10.0541 0.713188 10.0541 0.924735 9.83771L4.52402 6.15605C5.15848 5.50706 5.15868 4.45491 4.52446 3.80568L0.965333 0.16229C0.753788 -0.0540967 0.410804 -0.0540967 0.199258 0.16229C-0.0122874 0.378678 -0.0122874 0.729511 0.199258 0.945898L3.75931 4.58743C3.97086 4.80382 3.97086 5.15465 3.75931 5.37104L0.158658 9.0541C-0.0528872 9.27049 -0.0528872 9.62132 0.158658 9.83771Z' fill='%23151618' /%3E%3C/svg%3E");
+
   /* Fonts */
   --font-family: "Open Sans", sans-serif;
   --second-family: "Cormorant", sans-serif;
@@ -63,6 +65,17 @@ img {
   width: 100%;
 }
 
+/* btn */
+.btn {
+  display: inline-block;
+  padding: 12px 41px;
+  border: 1px solid #151618;
+  font-weight: 300;
+  font-size: 20px;
+  background-color: var(--c-white);
+}
+
+/* title */
 .title {
   font-family: var(--second-family);
   font-weight: 400;
@@ -73,14 +86,19 @@ img {
 
 /* link */
 .link {
-  transition: color .35s ease;
+  transition: opacity .35s ease;
 }
 .link:hover {
-  color: var(--c-black-hover);
+  opacity: .7;
 }
 
+/* bg */
 .bg {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.bg-color {
+  background-color: var(--c-bg);
 }
