--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import Blockquote from '../components/Main/Blockquote/Blockquote.astro';
 import Collections from '../components/Main/Collections/Collections.astro';
 import Reviews from '../components/Main/Reviews/Reviews.astro';
 import Blog from '../components/Main/Blog/Blog.astro';
+import EmailBlock from '../components/Main/EmailBlock/EmailBlock.astro';
+import Prioritise from '../components/Main/Prioritise/Prioritise.astro';
 ---
 
 <Layout>
@@ -15,5 +17,7 @@ import Blog from '../components/Main/Blog/Blog.astro';
 		<Collections />
 		<Reviews />
 		<Blog />
+		<EmailBlock />
+		<Prioritise />
 	</main>
 </Layout>
