--- a/src/components/Base/Footer/Footer.astro
+++ b/src/components/Base/Footer/Footer.astro
@@ -49,23 +49,16 @@ import './footer.css';
           </div>
           <div class="footer__contacts">
             <Logo />
-
           </div>
           <ul class="footer-social">
             <li class="footer-social__item">
-              <a class="footer-social__link footer-social__link--facebook bg" href="#">
-
-              </a>
+              <a class="footer-social__link footer-social__link--facebook bg" href="#"></a>
             </li>
             <li class="footer-social__item">
-              <a class="footer-social__link footer-social__link--youtube bg" href="#">
-
-              </a>
+              <a class="footer-social__link footer-social__link--youtube bg" href="#"></a>
             </li>
             <li class="footer-social__item">
-              <a class="footer-social__link footer-social__link--instagram bg" href="#">
-
-              </a>
+              <a class="footer-social__link footer-social__link--instagram bg" href="#"></a>
             </li>
             <li class="footer-social__item">
               <a class="footer-social__link footer-social__link--twitter bg" href="#">
